articles docs added
