# app/Http/Controllers/ArticleController.php
@@ -10,9 +10,28 @@ use Illuminate\Support\Facades\Validator;
 class ArticleController extends Controller
 {
     /**
-     * Display a listing of the resource.
-     *
-     * @return \Illuminate\Http\Response
+     * @OA\Get(
+     * path="/api/articles",
+     * summary="Get Articles of a user",
+     * tags={"articles"},
+     * security={ {"bearer": {} }},
+     * @OA\Response(
+     *    response=401,
+     *    description="error",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Unauthenticated")
+     *     )
+     * ),
+     * @OA\Response(
+     *    response=200,
+     *    description="Success",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Articles retrieved successfully"),
+     *       @OA\Property(property="data", type="object", ref="#/components/schemas/Article"
+     *      ),
+     *    )
+     * )
+     *)
      */
     public function index()
     {
@@ -24,10 +43,56 @@ class ArticleController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @return \Illuminate\Http\Response
+     * @OA\Post(
+     * path="/api/articles",
+     * summary="Create Article",
+     * tags={"articles"},
+     * security={ {"bearer": {} }},
+     * @OA\RequestBody(
+     *    required=true,
+     *    description="Basic Registration Data",
+     *    @OA\JsonContent(
+     *       required={"title"},
+     *       @OA\Property(property="title", type="string",),
+     *       @OA\Property(property="description", type="string", ),
+     *    ),
+     * ),
+     * @OA\Response(
+     *     response=422,
+     *     description="Validation error",
+     *     @OA\JsonContent(
+     *        @OA\Property(property="message", type="string", example="The given data was invalid."),
+     *        @OA\Property(
+     *           property="errors",
+     *           type="object",
+     *           @OA\Property(
+     *              property="title",
+     *              type="array",
+     *              collectionFormat="multi",
+     *              @OA\Items(
+     *                 type="string",
+     *                 example={"The title field is required."},
+     *              )
+     *           )
+     *        )
+     *     )
+     *  ),
+     * @OA\Response(
+     *    response=401,
+     *    description="error",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Unauthenticated")
+     *     )
+     * ),
+     * @OA\Response(
+     *    response=200,
+     *    description="Success",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Article saved successfully"),
+     *      ),
+     *    )
+     * )
+     *)
      */
     public function store(Request $request)
     {
@@ -36,7 +101,10 @@ class ArticleController extends Controller
         ]);
 
         if ($validator->fails()) {
-            return response()->json($validator->messages(), 422);
+            return response()->json([
+                'message' => 'The given data was invalid.',
+                'errors'  => $validator->messages(),
+            ], 422);
         }
 
         $article = new Article();
@@ -48,11 +116,64 @@ class ArticleController extends Controller
     }
 
     /**
-     * Update the specified resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @OA\Put(
+     * path="/api/articles/{id}",
+     * summary="Update Article",
+     * tags={"articles"},
+     * security={ {"bearer": {} }},
+     * @OA\Parameter(
+     *    description="Id of article",
+     *    in="path",
+     *    name="id",
+     *    required=true,
+     *    example="1",
+     *    @OA\Schema(type="integer")
+     * ),
+     * @OA\RequestBody(
+     *    required=true,
+     *    description="Basic Registration Data",
+     *    @OA\JsonContent(
+     *       required={"title"},
+     *       @OA\Property(property="title", type="string",),
+     *       @OA\Property(property="description", type="string", ),
+     *    ),
+     * ),
+     * @OA\Response(
+     *     response=422,
+     *     description="Validation error",
+     *     @OA\JsonContent(
+     *        @OA\Property(property="message", type="string", example="The given data was invalid."),
+     *        @OA\Property(
+     *           property="errors",
+     *           type="object",
+     *           @OA\Property(
+     *              property="title",
+     *              type="array",
+     *              collectionFormat="multi",
+     *              @OA\Items(
+     *                 type="string",
+     *                 example={"The title field is required."},
+     *              )
+     *           )
+     *        )
+     *     )
+     *  ),
+     * @OA\Response(
+     *    response=401,
+     *    description="error",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Unauthenticated")
+     *     )
+     * ),
+     * @OA\Response(
+     *    response=200,
+     *    description="Success",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Article saved successfully"),
+     *      ),
+     *    )
+     * )
+     *)
      */
     public function update(Request $request, $id)
     {
@@ -75,17 +196,49 @@ class ArticleController extends Controller
     }
 
     /**
-     * Remove the specified resource from storage.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @OA\Delete(
+     * path="/api/articles/{id}",
+     * summary="Delete Article",
+     * tags={"articles"},
+     * security={ {"bearer": {} }},
+     * @OA\Parameter(
+     *    description="Id of article",
+     *    in="path",
+     *    name="id",
+     *    required=true,
+     *    example="1",
+     *    @OA\Schema(type="integer")
+     * ),
+     * @OA\Response(
+     *    response=401,
+     *    description="error",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Unauthenticated")
+     *     )
+     * ),
+     * @OA\Response(
+     *    response=404,
+     *    description="error",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="No Article Found")
+     *     )
+     * ),
+     * @OA\Response(
+     *    response=200,
+     *    description="Success",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Article deleted successfully"),
+     *      ),
+     *    )
+     * )
+     *)
      */
     public function destroy($id)
     {
 
         $article = Article::where("user_id", Auth::id())->find($id);
         if (!$article) {
-            return response()->json(['error' => 'No Article Found'], 404);
+            return response()->json(['message' => 'No Article Found'], 404);
         }
         $article->delete();
         return response()->json(['message' => 'Article deleted successfully']);
